--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ singledispatch==3.4.0.3
 urllib3==1.24.1 
 wrapt==1.10.11
 flask-wtf
-flask-bootstrap
+flask-bootstrap4==4.0.2
 flask-login
 flask-email
 flask-uploads
